# CODEX-MONAD

./: .gitignore  APP_TESTING_COMPLETE_2026-01-19.txt  APP_TESTING_COMPLETE_2026-01-20_120040.md  APP_TESTING_REPORT_2026-01-19.md  ARCHIVE_ARCHAEOLOGY_REPORT_2026-01-19.md  ARCHIVE_ARCHAEOLOGY_REPORT_2026-01-20_114741.md  ARCHIVE_EXPLORATION_RESURRECTION_2026-01-20_115407.md  ARCHIVE_SUMMARY.txt  AUDIT_REPORT_2026-01-19.md  BOOTSTRAP_TOOLING_AUDIT_2026-01-19_233611.md  BUGFIX_REPORT_OVERNIGHT_MISSION_2026-01-20.md  CHANGELOG.md  CHANGELOG_v1.1.1.md  CHANGELOG_v1.1.md  CLAUDE.md  CODEX_MONAD_FINAL_AUDIT_2026-01-20_114309.md  CODEX_MONAD_STATE_CHECK_2026-01-19_232356.md  COMPLETION_REPORT.txt  DOCS_CHECK_REPORT_2026-01-19_224645.md  DOCUMENTATION_MISSION_COMPLETE_2026-01-20_200921.md  DOCUMENTATION_STATUS_REPORT.md  HINENI_D_DRIVE_MANIFEST_2026-01-21.json  HINENI_D_DRIVE_MANIFEST_2026-01-21.md  HINENI_F_DRIVE_MANIFEST_2026-01-21.json  HINENI_F_DRIVE_MANIFEST_2026-01-21.md  HINENI_HUB_PC_MANIFEST_2026-01-21.json  HINENI_HUB_PC_MANIFEST_2026-01-21.md  IMPLEMENTATION_SUMMARY_2026-01-19.md  INDIVIDUAL_APP_ANALYSIS_2026-01-20_120422.md  MASTER_SESSION_SUMMARY_2026-01-19.txt  OVERNIGHT_WORK_SUMMARY.md  README.md  README_REGISTRY.md  README_v1.1.md  SESSION_COMPLETE_2026-01-19.txt  START_MAC_LINUX_NOGPU.sh  SYSTEM_RECONNAISSANCE_2026-01-19_231732.md  TEST_CHECKLIST.md  bureaucratic-universe.html  codex-apps.json  (+31 more)
apps/codex_pdf/: HANDOFF.md  README.md  SESSION_LOG.md  pyproject.toml
apps/codex_pdf/codex_pdf/: __init__.py
apps/codex_pdf/tests/: test_multilingual_ocr.py  (+1 more)
(+357 files in other folders)
